--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@
 footer{
     background-color: #161616;
     width:100vw;
-    height:50vh;
+    height:500px;
     display: fixed;
     margin-top: 20px;
    
